--- a/www/index.html
+++ b/www/index.html
@@ -641,7 +641,33 @@
                 <span class="sync-status" id="sync-status">✅ 已同步</span>
                 <span class="last-sync-time" id="last-sync-time"></span>
               </div>
-              <div class="sync-buttons">
+              
+              <!-- 修改密码 -->
+              <div class="change-password-section">
+                <div class="section-title" onclick="document.getElementById('password-form').classList.toggle('hidden')">
+                  <span class="material-icons-outlined">lock</span>
+                  修改密码
+                  <span class="material-icons-outlined expand-icon">expand_more</span>
+                </div>
+                <div id="password-form" class="password-form hidden">
+                  <div class="form-group">
+                    <input type="password" id="current-password" placeholder="当前密码">
+                  </div>
+                  <div class="form-group">
+                    <input type="password" id="new-password" placeholder="新密码（至少6位）">
+                  </div>
+                  <div class="form-group">
+                    <input type="password" id="confirm-password" placeholder="确认新密码">
+                  </div>
+                  <button class="sync-btn primary full-width" onclick="window.todoApp.changePassword()">
+                    <span class="material-icons-outlined">check</span>
+                    确认修改
+                  </button>
+                  <div class="password-message" id="password-message"></div>
+                </div>
+              </div>
+              
+              <div class="sync-action-buttons">
                 <button class="sync-btn primary" id="sync-now-btn">
                   <span class="material-icons-outlined">sync</span>
                   立即同步
